syntax = "proto3";

package auth;

option go_package = "./apis/interservice/blogs/pb";


message SetUserDeactivatedReq {
    string email = 1;
}

message SetUserDeactivatedRes {
    int32 status = 1;
    string error = 2;
    string message = 3;
}

service BlogService {
    rpc SetUserDeactivated(SetUserDeactivatedReq) returns (SetUserDeactivatedRes){};
}